ci: fix function syntax
Signed-off-by: Burgess Chang <bsc@brsvh.org>

--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 #+OPTIONS: toc:nil
 #+STARTUP: noindent fnadjust
 #+EXPORT_FILE_NAME: .github/README.md
-#+TITLE: nixing
+#+TITLE: Nixing
 #+AUTHOR: Burgess Chang
 #+EMAIL: (concat bsc at-sign brsvh dot org)
 
