feat: create flake.nix
Signed-off-by: Burgess Chang <bsc@brsvh.org>

--- a/docs/README.org
+++ b/docs/README.org
@@ -1,6 +1,6 @@
 #+OPTIONS: toc:nil
 #+STARTUP: noindent fnadjust
-#+EXPORT_FILE_NAME: .github/README.md
+#+EXPORT_FILE_NAME: ../.github/README.md
 #+TITLE: Nixing
 #+AUTHOR: Burgess Chang
 #+EMAIL: (concat bsc at-sign brsvh dot org)
